# RAG-ChatBot

./: .dockerignore  .env.docker.example  .env.example  .gitignore  DEPLOYMENT.md  README.md  docker-compose.local.yml  docker-compose.yml  main.py  pyproject.toml
assets/.postman/: config.json
assets/postman/collections/: New Collection.postman_collection.json
assets/postman/collections/RAG-System/: Chunking.request.yaml  Info.request.yaml  UploadFile.request.yaml  Welcome.request.yaml  WikiSearch.request.yaml  nlp_chat.request.yaml  nlp_chat_generate.request.yaml  nlp_chat_stream.request.yaml  nlp_search.request.yaml
assets/postman/collections/RAG-System/.resources/: definition.yaml
config/: grafana-alerts-local.yml  grafana-alerts.yml  grafana-contact-points-local.yml  grafana-contact-points.yml  grafana-dashboards.yml  grafana-datasources.yml  nginx-local.conf  nginx.conf  prometheus.yml
docker/: .gitignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChatBox.tsx  DocumentPreview.tsx  SettingsPanel.tsx  Sidebar.tsx
frontend/app/lib/: ToastContext.tsx  api.ts
routes/: base.py
src/: .env.example  main.py  pyproject.toml
src/assets/: .gitignore
src/assets/postman/collections/: RAG-System_Collection.json
src/assets/postman/globals/: workspace.postman_globals.json
src/controllers/: BaseController.py  DataController.py  NLPController.py  ProcessController.py  ProjectController.py  Wiki_SearchController.py  __init__.py
src/helpers/: ResponseEnums.py  __init__.py  config.py  decorators.py  dependencies.py  exceptions.py  logger.py
src/models/: AssetModel.py  BaseDataModel.py  ChunkModel.py  ProjectModel.py  UserModel.py  __init__.py
src/models/db_schemes/: __init__.py  asset.py  data_chunk.py  document_chunk.py  project.py  user.py
src/models/enums/: AssetTypeEnum.py  DataBaseEnum.py  ProcessingEnums.py  ResponseEnums.py  __init__.py
src/routes/: base.py  data.py  documents.py  nlp.py  settings.py  wiki_search.py
src/routes/schemes/: data.py  nlp.py  wiki.py
src/services/llm/: LLMEnums.py  LLMFactory.py  LLMInterface.py  __init__.py
src/services/llm/Clients/: CohereClient.py  GeminiClient.py  OpenAIClient.py  SparseClient.py  __init__.py
src/services/ranker/: RankerEnums.py  RankerFactory.py  RankerInterface.py  __init__.py
src/services/ranker/Clients/: CohereRankerClient.py  LocalRankerClient.py  __init__.py
src/services/vectordb/: VectorDBEnums.py  VectorDBFactory.py  VectorDBInterface.py  __init__.py
src/services/vectordb/Clients/: MongoDBClient.py  QdrantClient.py  __init__.py
