[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "docling>=2.76.0",
    "fastapi>=0.133.0",
    "langchain-docling>=2.0.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.41.0",
    "wikipedia-api>=0.9.0",
]
[tool.ruff]
# Increase the line length to 120 so your FastAPI routes fit on one line
line-length = 300
[tool.ruff.format]
# Ensures double quotes are used as seen in your screenshot
quote-style = "double"
# Ensures trailing commas are respected for multi-line formatting
skip-magic-trailing-comma = true
[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
