[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "docling>=2.76.0",
    "fastapi>=0.133.0",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "motor>=3.7.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "ruff>=0.15.4",
    "uvicorn[standard]>=0.41.0",
    "wikipedia-api>=0.9.0",
]

[tool.ruff.format]
# Ensures double quotes are used as seen in your screenshot
quote-style = "double"
# Ensures trailing commas are respected for multi-line formatting
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
