[project]
name = "rag-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "asgi-correlation-id>=4.3.4",
    "cohere>=5.20.7",
    "docling>=2.76.0",
    "docling-core[chunking-openai]>=2.66.0",
    "fastapi>=0.133.0",
    "fastembed>=0.8.0",
    "google-genai>=1.67.0",
    "langchain-community>=0.4.1",
    "langchain-docling>=2.0.0",
    "motor>=3.7.1",
    "openai>=2.26.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.17.1",
    "ruff>=0.15.4",
    "tiktoken>=0.12.0",
    "transformers>=4.57.6",
    "uvicorn[standard]>=0.41.0",
    "wikipedia-api>=0.9.0",
]
[tool.ruff]
# Increase the line length to 120 so your FastAPI routes fit on one line
line-length = 120
[tool.ruff.format]
# Ensures double quotes are used as seen in your screenshot
quote-style = "double"
# Ensures trailing commas are respected for multi-line formatting
skip-magic-trailing-comma = false

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
